--- a/tabbycat/settings/local.example
+++ b/tabbycat/settings/local.example
@@ -7,9 +7,9 @@ ON_LOCAL = True
 DATABASES = {
     'default': {
         'ENGINE'      : 'django.db.backends.postgresql',
-        'NAME'        : '',  # put your PostgreSQL database's name in here
-        'USER'        : '',  # put your PostgreSQL login role's user name in here
-        'PASSWORD'    : '',  # put your PostgreSQL login role's password in here
+        'NAME'        : 'tab',  # put your PostgreSQL database's name in here
+        'USER'        : 'postgres',  # put your PostgreSQL login role's user name in here
+        'PASSWORD'    : 'tara45',  # put your PostgreSQL login role's password in here
         'HOST'        : 'localhost',
         'PORT'        : '5432',
         'CONN_MAX_AGE': None,
